crates/runtime/tests/search/snapshots/integration_models__search__no_acceleration-no_vector_engine-view_union_all_join-hybrid_multiple_column_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "primary_key": {
        "id": 361
      },
      "score": 0.78
    },
    {
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "How many groups of 2 are in 14?"
      },
      "primary_key": {
        "id": 462
      },
      "score": 0.77
    },
    {
      "data": {
        "question": "How many groups of 5 are in 25?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "How many groups of 5 are in 25?"
      },
      "primary_key": {
        "id": 464
      },
      "score": 0.76
    },
    {
      "data": {
        "question": "How many groups of 3 are in 18?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "How many groups of 3 are in 18?"
      },
      "primary_key": {
        "id": 463
      },
      "score": 0.75
    }
  ]
}
