crates/runtime/tests/search/snapshots/integration_models__search__no_acceleration-no_vector_engine-view_union_all_join-hybrid_multiple_column_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "question": "What is the effect of fibrinolysin in the reagents on the Warner-Lambert screening method for fibrinogen?"
      },
      "primary_key": {
        "id": 938
      },
      "score": 0.66
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "question": "Which compound is not an intermediate of the TCA cycle?"
      },
      "primary_key": {
        "id": 1279
      },
      "score": 0.66
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "question": "Which of the following is an intensive property of a system?"
      },
      "primary_key": {
        "id": 1289
      },
      "score": 0.65
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "question": "How is microsporidia infection typically acquired?"
      },
      "primary_key": {
        "id": 446
      },
      "score": 0.64
    }
  ]
}
