crates/runtime/tests/search/snapshots/integration_models__search__vector_search_sql_filters.snap
---
source: crates/runtime/tests/search/mod.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 120,
    "answer": "$\\boxed{\\text{True}}$, because severe post-treatment cardiopulmonary complications sometimes occur.",
    "score": 0.637
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "score": 0.631
  },
  {
    "id": 810,
    "answer": "Consequential late effects are late effects that develop as a consequence of severe early effects.",
    "score": 0.63
  },
  {
    "id": 890,
    "answer": "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume.",
    "score": 0.629
  }
]
