crates/runtime/tests/search/snapshots/integration_models__search__vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "subject": "medicine"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  }
]
