crates/runtime/tests/search/snapshots/integration_models__search__vector_search_sql_vectors.snap
---
source: crates/runtime/tests/search/mod.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 1536,
    "score": 0.655
  },
  {
    "id": 58,
    "answer": "$\\frac{5}{6} < \\frac{5}{5}$ because $\\frac{5}{6}$ is less than 1, while $\\frac{5}{5}$ equals 1.  \n\nFinal answer: $\\boxed{<}$",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 1536,
    "score": 0.645
  },
  {
    "id": 543,
    "answer": "This is an example of a $\\boxed{\\text{rate}}$ because it compares two unlike denominate numbers (erasers and pencils).",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 1536,
    "score": 0.636
  },
  {
    "id": 1318,
    "answer": "1. In words: \"two and three tenths.\"  \n2. As a fraction: \\(\\boxed{\\dfrac{23}{10}}\\).",
    "array_length(vector_search(qs, Utf8(\"second\"), answer).answer_embedding)": 1536,
    "score": 0.631
  }
]
